Revision history for Gimp-Perl extension.

1.07  Mon Mar 15 01:27:05 CET 1999
	- added examples/yinyang, examples/image_tile, examples/stamps.
        - bangpath is no longer updated inplace. As a result, only plug-ins
          that are going to get installed are being fixed, the examples are
          not.
	- fixed error handling bugs in Gimp::Lib, streamlined and improved 
	  error handling.
	- reworked callback handling, should be more flexible in the future.
        - changed implementation of PF_CUSTOM (still untested).
        - fixed some rather scientific memory leaks, fixed more bugs.
        - the case when "not enough arguments" were supplied for a function
          was not reliably detected.
        - gimp_progress_init now accepts either one or two arguments.
        - switched to using Devel::PPPort, which hopefulyl solves all my
          problems.
        - argh! gimptool path was wrong again! the fix version should be much
          faster as well.
        - new module Gimp::Pod.
        - embedded pod documentation will now be shown when the Help button
          is pressed (see image_tile for an example).
        - new evaluation function that evaluates a string as perl code, but
          does so on the server side. (Gimp->server_eval(string)).

1.061 Fri Mar 12 21:27:26 CET 1999
	- closed big, BIG security hole on password authenticitation
	  (basically one could do anything includung killing your
	  system without authorization. argh). This required a
	  protocol change, so old clients are unable to connect using
	  password-authenticitation.
	- sped up Gimp::Net considerably, by getting rid of the IO::Socket
	  module, which required half a second(!!) to load.
	- fixed Gimp::Util::gimp_image_layertype.
	- make install checks for install directory writability and refuses to
	  install if it isn't.
	- fixed a longstanding bug that caused (some) set_trace calls
	  to be ignored when running under Gimp::Net.